# the_quizz

./: .env  .gitignore  Cargo.toml  README.md  favicon.xcf  tasks.py  the_quizz.dot
locale/: messages.pot
locale/fr_FR/LC_MESSAGES/: messages.mo  messages.po
src/: compile_templates.rs  lib.rs  main.rs  models.rs  web.rs
static/: README.md  gulpfile.js  package.json
static/app/css/: fonts.css  style.css
static/app/fonts/: roboto
static/app/js/: script.js
static/app/tags/: apphead.tag  appli.tag  button.tag  questions.tag  response.tag
static/lib/: lib.js
static/templates/: index.html
