[package]
name = "the_quizz"
version = "0.1.0"
authors = ["Ferry Jérémie <ferryjeremie@free.fr>"]

[dependencies]
rustbox = "0.8.1"
postgres = "0.11.10"
gettext = "0.2.0"
iron = "0.4.0"
hyper = "0.9.7"
mount = "0.2.1"
staticfile = "0.3.0"
router = "0.2.0"
rustc-serialize = "0.3.19"
tera = "0.1.2"
persistent = "0.0.6"

[[bin]]
name = "the_quizz"
path = "src/main.rs"

[[bin]]
name = "compile_templates"
path = "src/compile_templates.rs"

[[bin]]
name = "the_quizz_web"
path = "src/web.rs"

[[bin]]
name = "essai"
path = "src/essai.rs"
