[package]
name = "the_quizz"
version = "0.3.0"
authors = ["Ferry Jérémie <ferryjeremie@free.fr>"]

[dependencies]
rustbox         = "0.9"
gettext         = "0.2.0"
rustc-serialize = "0.3"
walkdir = "1.0"
diesel = { version = "0.11.0", features = ["postgres"] }
diesel_codegen = { version = "0.11.0", features = ["postgres"] }
dotenv = "0.8.0"
log = "0.3.6"
slog-envlogger = "2.0.0"
rocket          = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "a4292ba" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "a4292ba" }
# Serialization and templating dependencies.
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rmp-serde = { version = "^0.13", optional = true }
tera = "0.3"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "a4292ba"
default-features = false
features = ["msgpack", "json"]
